bug d'alignement dans le header corrigé

--- a/public_html/styles/scss/_layout.scss
+++ b/public_html/styles/scss/_layout.scss
@@ -162,6 +162,7 @@ section{
         &>li{
             position: relative;
             line-height: 25px;
+            margin-bottom: -4px;
         }
     }
     li{
